# neko

./: .gitignore  README.md  comfyui.dockerfile  compose.yaml  hackenv.dockerfile  pocketbase.dockerfile  pyproject.toml  reactapp.dockerfile  requirements.txt
.github/workflows/: CI.yml  ci.yml  deploy-docs.yml  osv-scanner.yml
.streamlit/: config.toml
backend/: pyproject.toml  requirements.txt
backend/src/: main.py
backend/src/lib/tools/: rag.py
datasets/hackndo/_posts/: 2015-08-21-deep-web-dark-web.md  2016-10-25-return-oriented-programming.md  2019-03-08-service-principal-name.md  2019-03-30-unconstrained-delegation.md  2019-07-30-bloodhound.md  2019-11-29-remote-lass-dump-passwords.md  2019-12-17-pass-the-hash.md  2023-07-03-blockchain.md  2023-07-10-ethereum.md  2023-07-24-sensitive-data.md  2024-05-30-password-spraying.md
docs/: README.md  docusaurus.config.ts  package.json
docs/blog/: 2019-05-28-first-blog-post.md  2019-05-29-long-blog-post.md  2021-08-01-mdx-blog-post.mdx  authors.yml
docs/blog/2021-08-26-welcome/: index.md
docs/docs/configuration/: _category_.json  agent.md
docs/docs/getting-started/: _category_.json  installation.md  intro.md  quickstart.md
docs/docs/soon/: _category_.json  contributing.md  roadmap.md
docs/src/css/: custom.css
docs/src/pages/: index.tsx
frontend/: package.json
frontend/src/: App.tsx  index.css
frontend/src/components/common/: Button.tsx  Input.tsx  MessageBox.tsx
frontend/src/components/forms/: ChatForm.tsx  LoginForm.tsx
frontend/src/pages/: ChatPage.tsx  LoginPage.tsx
frontend/src/services/: authService.ts  chatService.ts
knowledge/: prompt.txt
src/: main.py  webui.py
src/akio/: main.py
src/akio/config/: constants.py
src/akio/lib/mcp/: client.py  server.py
src/config/: constants.py
src/datasets/hackndo/_posts/: 2019-02-02-kerberos.md  2019-03-02-silver-golden-ticket.md  2019-03-16-kerberoasting.md  2019-03-23-as-rep-roasting.md  2020-03-03-ntlm-relay.md  2023-07-01-tokens.md
src/knowledge/: prompt.txt
src/lib/api/: routes.py
src/lib/mcp/: server.py
src/lib/tools/: browser.py  rag.py  shell.py  web_search.py
src/lib/tui/: app.py
src/lib/utils/: cli.py  env.py  voice.py
src/neko/: main.py
src/neko/config/: constants.py  init.py  settings.py
src/neko/lib/mcp/: client.py  server.py
src/neko/lib/tools/: browser.py  code.py  rag.py
src/vectordb/cf384787-8cac-4b88-909e-d7d60af7324e/: index_metadata.pickle
(+2 files in other folders)
