[project]
name = "neko"
version = "0.0.1.dev0"
description = "An agentic AI for red team tasks."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "asyncio>=3.4.3",
    "browser-use>=0.1.23",
    "chromadb>=0.5.23",
    "fastapi[standard]>=0.116.1",
    "mcp[cli]>=1.9.2",
    "ollama>=0.5.1",
    "openai-whisper>=20250625",
    "playwright>=1.52.0",
    "pydantic>=2.10.6",
    "rich>=13.9.4",
    "watchdog>=6.0.0",
]

[project.scripts]
neko = "neko.main:main"

[build-system]
requires = ["uv_build >= 0.7.19, <0.9.0"]
build-backend = "uv_build"
