[project]
name = "akio"
version = "0.0.1.dev0"
description = "An agentic AI for red team tasks."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "asyncio>=3.4.3",
    "browser-use>=0.7.10",
    "chromadb>=0.5.23",
    "fastapi[standard]>=0.116.1",
    "mcp[cli]>=1.9.2",
    "ollama>=0.5.1",
    "openai-whisper>=20250625",
    "playwright>=1.52.0",
    "pydantic>=2.10.6",
    "rich>=13.9.4",
    "watchdog>=6.0.0",
]
classifiers = [
  "Programming Language :: Python :: 3",
  "Development Status :: 2 - Pre-Alpha",
  "Operating System :: POSIX :: Linux",
  "Operating System :: Unix",
  "Operating System :: MacOS",
  "Topic :: Security",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
keywords = [
  "ai",
  "llm",
  "agent",
  "autonomous",
  "pentest",
  "redteam",
  "local",
  "rag",
  "mcp"
]
authors = [
  { name = "Fastiraz" }
]
maintainers = [
  { name = "Fastiraz" }
]

[project.scripts]
akio = "akio.main:main"

[project.urls]
homepage = "https://github.com/fastiraz/akio"
issues = "https://github.com/Fastiraz/akio/issues"
repository = "https://github.com/fastiraz/akio"
documentation = "https://fastiraz.github.io/grimoire/"

[build-system]
requires = ["uv_build >= 0.7.19, <0.9.0"]
build-backend = "uv_build"
